--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
+    padding-top: 152px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 0;
     font-family: Poppins, arial, san-serif;
 }
 
 header {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    right: 0;
     padding: 15px 85px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: white;
 }
 
 ul {
@@ -29,6 +40,7 @@ ul > li {
     font-size: 16px;
     font-weight: 600;
     line-height: 100%;
+    cursor: pointer;
 }
 
 header > button {
@@ -43,4 +55,93 @@ header > button {
     gap: 10px;
     font-size: 16px;
     margin-top: 21px;
+}
+
+header > img {
+    width: 76px;
+    height: 42.75px;
+    margin-top: 15px;
+    cursor: pointer;
+}
+
+.main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 157px;
+}
+
+.main-page-description-text {
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-items: start;
+    gap: 36px;
+}
+
+.main-page-description-text > h1 {
+    font-size: 108px;
+    font-weight: 800;
+    width: 595px;
+    height: 306px;
+    line-height: 102px;
+}
+
+.description {
+    color: #5A5959;
+    font-size: 16px;
+    font-weight: 600;
+    width: 404px;
+    height: 91px;
+    margin: 0;
+}
+
+.button-list {
+    display: flex;
+    gap: 40px;
+}
+
+.shop-now-button {
+    padding: 6px 16px;
+    width: 150px;
+    height: 41px;
+    background-color: #D01C28;
+    color: white;
+    border: none;
+    font-family: Inter;
+    font-weight: 600;
+    font-size: 24px;
+}
+
+.category-button {
+    width: 141px;
+    height: 41px;
+    border: 1px solid;
+    background-color: transparent;
+    color: #5A5959;
+    font-family: Inter;
+    font-weight: 600;
+    font-size: 24px;
+    padding: 6px 16px;
+}
+
+.additional-text {
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 16px;
+    color: #5A5959;
+}
+
+.links-list {
+    display: flex;
+    gap: 16px;
+}
+
+div.link-list > img {
+    width: 32px;
+}
+
+.main-page-photo {
+    width: 530px;
+    height: 487.06px;
 }
